--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
